--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -71,38 +71,40 @@
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
 
-    <ImageView
+    <TextView
+        android:id="@+id/share_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:gravity="center"
+        android:padding="@dimen/card_action_button_padding"
+        android:text="@string/share_content"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
+        app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    <TextView
         android:id="@+id/favorite_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
+        android:drawableLeft="@drawable/favorite_state_list"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/favorite_state_list"
+        android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
-        android:src="@drawable/favorite_state_list"
+        android:text="@string/favorite_content"
+        android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/share_icon"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <!--<ImageView-->
-        <!--android:id="@+id/share_icon"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginLeft="0dp"-->
-        <!--android:layout_marginTop="0dp"-->
-        <!--android:background="?attr/selectableItemBackgroundBorderless"-->
-        <!--android:clickable="true"-->
-        <!--android:contentDescription="@string/favorite_content"-->
-        <!--android:padding="@dimen/card_action_button_padding"-->
-        <!--android:src="@drawable/ic_share_grey600_24dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="@+id/guideline"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/text_state_name"-->
-        <!--app:layout_constraintVertical_bias="1.0" />-->
+        app:layout_constraintLeft_toRightOf="@+id/share_icon"
+        app:layout_constraintTop_toTopOf="@+id/share_icon" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -112,24 +114,5 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="16dp"
         app:layout_constraintGuide_begin="16dp" />
-
-    <TextView
-        android:id="@+id/share_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:drawableLeft="@drawable/ic_share_grey600_24dp"
-        android:drawablePadding="8dp"
-        android:drawableStart="@drawable/ic_share_grey600_24dp"
-        android:gravity="center"
-        android:text="@string/share_content"
-        android:textColor="@color/dark_grey"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
 
 </android.support.constraint.ConstraintLayout>
