--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -6,44 +6,44 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text_variety"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingEnd="4dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="4dp"
-            android:paddingStart="0dp"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
-            app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Arecal betlanut long text faking, Normal Variety long text I want to ellipsise"
-            app:layout_constraintHorizontal_bias="0.0" />
+    <TextView
+        android:id="@+id/text_variety"
+        style="@style/TextAppearance.AppCompat.Subhead"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingEnd="4dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="4dp"
+        android:paddingStart="0dp"
+        android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Arecal betlanut long text lonnng long long long long text lonnng long long long long text lonnng long long long"
+        app:layout_constraintHorizontal_bias="0.0" />
 
-        <TextView
-            android:id="@+id/text_modal_price"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:textStyle="bold"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="\u20B9 3950" />
+    <TextView
+        android:id="@+id/text_modal_price"
+        style="@style/TextAppearance.AppCompat.Subhead"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:textStyle="bold"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="\u20B9 3950" />
 
     <TextView
         android:id="@+id/text_market_district"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="4dp"
         android:maxLines="2"
         android:paddingEnd="16dp"
         android:paddingLeft="0dp"
@@ -56,7 +56,7 @@
     <TextView
         android:id="@+id/text_state_name"
         style="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
@@ -66,53 +66,51 @@
         android:paddingStart="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         tools:text="Andhra Pradesh"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
 
-    <ImageView
+    <TextView
+        android:id="@+id/share_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:gravity="center"
+        android:padding="@dimen/card_action_button_padding"
+        android:text="@string/share_content"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
+        app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    <TextView
         android:id="@+id/favorite_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:padding="@dimen/card_action_button_padding"
-        android:src="@drawable/favorite_state_list"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/share_icon"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-    <TextView
-        android:id="@+id/share_icon"
-        android:clickable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:padding="@dimen/card_action_button_padding"
-        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawableLeft="@drawable/favorite_state_list"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:drawableStart="@drawable/favorite_state_list"
         android:gravity="center"
-        android:text="@string/share_content"
-        android:textColor="@color/dark_grey"
+        android:padding="@dimen/card_action_button_padding"
+        android:text="@string/favorite_content"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/share_icon"
+        app:layout_constraintTop_toTopOf="@+id/share_icon" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline"
         android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="16dp"
-        app:layout_constraintGuide_begin="16dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
 </android.support.constraint.ConstraintLayout>
