--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -71,23 +71,21 @@
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
 
-    <TextView
-        android:id="@+id/share_icon"
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/details_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/ic_share_grey600_24dp"
-        android:gravity="center"
+        android:text="@string/details_content"
         android:padding="@dimen/card_action_button_padding"
-        android:text="@string/share_content"
-        android:textStyle="bold"
+        android:drawableStart="@drawable/ic_expand_more_black_24dp"
+        android:clickable="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
         app:layout_constraintTop_toBottomOf="@+id/text_state_name"
-        app:layout_constraintHorizontal_chainStyle="spread_inside" />
+        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
 
     <TextView
         android:id="@+id/favorite_icon"
@@ -102,9 +100,26 @@
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/favorite_content"
         android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="@+id/share_icon"
+        app:layout_constraintLeft_toRightOf="@+id/details_icon"
+        app:layout_constraintTop_toTopOf="@+id/details_icon" />
+
+    <TextView
+        android:id="@+id/share_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:gravity="center"
+        android:padding="@dimen/card_action_button_padding"
+        android:text="@string/share_content"
+        android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/share_icon"
-        app:layout_constraintTop_toTopOf="@+id/share_icon" />
+        app:layout_constraintLeft_toRightOf="@+id/favorite_icon"
+        app:layout_constraintTop_toTopOf="@+id/details_icon" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
