--- a/app/src/main/res/layout/activity_commodity_list.xml
+++ b/app/src/main/res/layout/activity_commodity_list.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_favorite_white_24dp" />
+            app:srcCompat="@drawable/ic_bookmark_brown" />
     </FrameLayout>
 
 
