--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/commodity_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         style="@style/main_recycler_view_style"
         app:layoutManager="LinearLayoutManager"
         tools:context="info.santhosh.evlo.ui.CommodityListActivity"
